# shipmi

./: README.rst  setup.cfg  setup.py  tox.ini
shipmi/: __init__.py  exception.py  provider.py  vbmc.py
shipmi/cmd/: shipmid.py
shipmi/providers/: openstack.conf  openstack.wrapper
shipmi/tests/unit/: test_manager.py  test_provider.py  test_vbmc.py  utils.py
shipmi/tests/unit/cmd/: test_shipmi.py
shipmi/tests/unit/providers/: test.conf
