[metadata]
name = shipmi
summary = A virtual BMC for executing shell scripts using IPMI commands.
description_file = README.rst
author = Gerard de Leeuw
# author_email = shipmi@leeuwit.nl
# home_page = TODO
python_requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages = shipmi

[entry_points]
console_scripts =
    shipmi = shipmi.cmd.shipmi:main
    shipmid = shipmi.cmd.shipmid:main

shipmi =
    add = shipmi.cmd.shipmi:AddCommand
    delete = shipmi.cmd.shipmi:DeleteCommand
    start = shipmi.cmd.shipmi:StartCommand
    stop = shipmi.cmd.shipmi:StopCommand
    list = shipmi.cmd.shipmi:ListCommand
    show = shipmi.cmd.shipmi:ShowCommand
